[project]
name = "easy21"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jaxtyping>=0.3.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
